2014-05-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (begin_multiple_window_info_session): Take
	array of REFERENCE * arguments.  Caller in info.c:main updated.
	(info_select_reference): Go to line number given by reference.
	All callers updated.
	(info_intuit_options_node): Return REFERENCE * instead of char *.
	Callers updated.

	* info/session.c (dump_nodes_to_file): Take reference array as
	a parameter.  Callers updated.

	* info/info.c (ref_list, ref_slots, ref_index): New file-level
	variables.
	(get_initial_file): Add reference to man page to ref_list if
	we fell back to it.
	(add_initial_nodes): Add nodes to ref_list instead of user_nodenames.

	* info/session.c (info_follow_menus): Work for split files.

	* info/indices.c (info_indices_of_file_buffer): Comment
	added about whether return value should be freed.

2014-05-06  Patrice Dumas  <pertusus@free.fr>

	* tp/Makefile.am (install-exec-hook): use $(transform) for
	--program-suffix.  Report from Glenn Morris.
	* Pod-Simple-Texinfo/lib/Pod/Simple/Texinfo.pm, 
	Pod-Simple-Texinfo/pod2texi.pl: add texinfo_sectioning_style 
	'appendix' and command-line option --appendix-sections.

2014-05-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\secfonts): increase \setleading to 17pt.

2014-05-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (read_quoted_string): Include any quoting
	characters in returned length.  Account for terminator character
	appearing immediately (for example, if input is malformed).
	(parse_top_node_line): Read fields with read_quoted_string.
	(scan_reference_label): Arguments changed.  Call
	canonicalize_whitespace on reference label.  Don't output "See".
	Caller in scan_node_contents updated.
	(colon_after_newline): Deleted.
	(scan_node_contents): Remove S_SkipDest flag from search so that
	results are at beginning of match instead of end.  Use
	read_quoted_string to get reference labels.
